# menu-manager

./: .gitignore  Cargo.toml  README.md
menu-maker/: Cargo.toml
menu-maker/src/: main.rs
res/: bateau_04-11.json  canlis_06-03.json  lark_06-03.json  menu_db.sqlite  westward_05-16.json
src/: main.rs  menu.rs
